--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "googleapis": "^92.0.0",
+    "jsonwebtoken": "^8.5.1",
     "opn": "^6.0.0"
   }
 }
