--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.2",
     "googleapis": "^92.0.0",
     "jsonwebtoken": "^8.5.1",
-    "opn": "^6.0.0"
+    "opn": "^6.0.0",
+    "request": "^2.88.2"
   }
 }
