--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^92.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "node-jose": "^2.0.0",
     "opn": "^6.0.0",
     "request": "^2.88.2"
   }
