--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@line/bot-sdk": "^7.4.0",
     "axios": "^0.25.0",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
